--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "web-vitals": "^5.0.2"
+    "web-vitals": "^5.0.2",
+    "zustand": "^5.0.5"
   },
   "scripts": {
     "dev": "vite",
